# grap

./: .hgsigs  DEBUG  IDA.md  LICENSE  README  README.md  WINDOWS.md  grap
doc/: COMPILE_OPTIONS.md  COMPILE_WINDOWS.md  DEBUG.md  TESTS.md  syntax.md  syntax_highlighting.md
examples/: analyze_backspace.py  backspace_4ee.grapp  backspace_4ee00c46da143ba70f7e6270960823be.dot  backspace_4ee00c46da143ba70f7e6270960823be_exact.dot  backspace_4ee00c46da143ba70f7e6270960823be_loop.grapp  backspace_call_push.dot  backspace_call_push.grapp  backspace_decrypt_algos.dot  backspace_samples.md  upx.grapp  xor_loop.dot
graphes/: .clang-format  CMakeLists.txt  GTSI-grap.cpp  GTSI-grap.h  Lexer.h  Parser.h  libGTSI.cpp  libGTSI.h  libGraphBinAlgo.c  libGraphBinAlgo.h  tests.cpp  tests.h  tests.hpp  todot.cpp  todot.h  todot.hpp
graphes/IDA/grap/: README.md  grap.py
graphes/IDA/grap/idagrap/analysis/: Analysis.py
graphes/IDA/grap/idagrap/config/: General.py
graphes/IDA/grap/idagrap/core/: CryptoIdentifier.py
graphes/IDA/grap/idagrap/error/: Exceptions.py
graphes/IDA/grap/idagrap/graph/: Graph.py  Node.py
graphes/IDA/grap/idagrap/modules/: Module.py  Pattern.py
graphes/IDA/grap/idagrap/patterns/: Modules.py
graphes/IDA/grap/idagrap/patterns/cryptography/: ModulesCrypto.py
graphes/IDA/grap/idagrap/patterns/cryptography/mode/: ModulesCryptoMode.py
graphes/IDA/grap/idagrap/patterns/cryptography/stream/: ModulesCryptoStream.py
graphes/IDA/grap/idagrap/patterns/cryptography/stream/rc4/set_key/: RC4SetKey.py  loop1.dot  loop2.dot
graphes/IDA/grap/idagrap/ui/: IDAgrapForm.py
graphes/IDA/grap/idagrap/ui/helpers/: ClassCollection.py
graphes/IDA/grap/idagrap/ui/widgets/: CryptoIdentificationWidget.py
graphes/bindings/: CMakeLists.txt
graphes/bindings/python/: CMakeLists.txt  libgraph.i  pygrap.i
graphes/libs/: CMakeLists.txt
graphes/libs/common/: CMakeLists.txt  ga_types.hpp
graphes/libs/dict/: dict.c  dict.cpp  dict.h  dict.hpp
graphes/libs/dotparser/: CMakeLists.txt  Expression.c  Expression.c.orig  Expression.cpp  Expression.h  Expression.hpp  Lexer.l  Parser.y  graphParser.c  graphParser.cpp  graphParser.h  graphParser.hpp  main.c  main.cpp  main.h  main.hpp
graphes/libs/include/: file_access.h  ga_types.h  ga_types.hpp  my_alloc.cpp  my_alloc.hpp  my_assert.h  my_assert.hpp  return_status.h  swap.h  symbol.h
graphes/libs/libgraph/: CMakeLists.txt  graph.c  graph.cpp  graph.h  graph.hpp  graphIO.c  graphIO.cpp  graphIO.h  graphIO.hpp  node.c  node.cpp  node.h  node.hpp  nodeIO.c  nodeIO.cpp  nodeIO.h  nodeIO.hpp  node_list.c  node_list.cpp  node_list.h  node_list.hpp
graphes/libs/node_info/: CMakeLists.txt  node_info.cpp  node_info.hpp
graphes/libsGTSI/: CMakeLists.txt  utils-gtsi.cpp  utils-gtsi.hpp
graphes/libsGTSI/Traversal/: CMakeLists.txt  Traversal.cpp  Traversal.hpp
graphes/tests_graphs/: Makefile
graphes/tests_graphs/test0/: pattern_0.dot
graphes/tests_graphs/test1/: test.dot
graphes/tests_graphs/test10/: pattern_0.dot  test.dot
graphes/tests_graphs/test11/: pattern_0.dot
graphes/tests_graphs/test12/: pattern_0.dot  test.dot
graphes/tests_graphs/test13/: pattern_0.dot
graphes/tests_graphs/test14/: pattern_0.dot
graphes/tests_graphs/test15/: pattern_0.dot  test.dot
graphes/tests_graphs/test16/: pattern_0.dot  test.dot
graphes/tests_graphs/test17/: pattern_0.dot  test.dot
graphes/tests_graphs/test18/: pattern_0.dot
graphes/tests_graphs/test2/: pattern_0.dot  test.dot
graphes/tests_graphs/test21/: pattern_0.dot  test.dot
graphes/tests_graphs/test22/: pattern_1.dot
graphes/tests_graphs/test23/: test.dot
graphes/tests_graphs/test24/: pattern_0.dot
graphes/tests_graphs/test26/: pattern_0.dot  test.dot
graphes/tests_graphs/test27/: pattern_0.dot
graphes/tests_graphs/test28/: test.dot
graphes/tests_graphs/test29/: pattern_0.dot  test.dot
graphes/tests_graphs/test3/: test.dot
graphes/tests_graphs/test30/: pattern_0.dot
graphes/tests_graphs/test31/: pattern_0.dot
graphes/tests_graphs/test32/: pattern_0.dot  test.dot
graphes/tests_graphs/test4/: test.dot
graphes/tests_graphs/test5/: test.dot
graphes/tests_graphs/test6/: pattern_0.dot  pattern_1.dot  pattern_2.dot  pattern_3.dot  test.dot
graphes/tests_graphs/test7/: pattern_0.dot  test.dot
graphes/tests_graphs/test8/: pattern_0.dot  test.dot
graphes/tests_graphs/test9/: pattern_0.dot
graphes/tools/: CMakeLists.txt
graphes/tools/GTSI-grap/: CMakeLists.txt  GTSI-grap.cpp  GTSI-grap.hpp
graphes/tools/grap/: CMakeLists.txt  grap.py
graphes/tools/grap-match/: CMakeLists.txt  grap-match.cpp  grap-match.hpp  grap-match.py
graphes/tools/tests/: CMakeLists.txt  test_all.py  tests.cpp  tests.hpp  tests_grap-match.py
graphes/tools/todot/: CMakeLists.txt  todot.cpp  todot.py
graphs/: CMakeLists.txt  LICENSE
graphs/libs/: CMakeLists.txt
graphs/libs/dotparser/: CMakeLists.txt  Expression.cpp  graphParser.hpp
graphs/libs/libgraph/: graph.cpp  node.hpp  nodeIO.cpp
graphs/libsGTSI/: CMakeLists.txt  utils-gtsi.cpp
graphs/tools/: CMakeLists.txt
graphs/tools/grap/: grap.py
graphs/tools/grap-match/: CMakeLists.txt  grap-match.cpp  grap-match.hpp
graphs/tools/grap_disassembler/: disassembler.py
graphs/tools/tests/: CMakeLists.txt  test_all.py  tests.cpp  tests.hpp
graphs/tools/todot/: todot.cpp
patterns/: basic_block_loop.dot  loop.dot  loop_wip.dot  trick_call5.grapp  trick_cpuid.grapp  trick_pushret.grapp  trick_vmware_detection.grapp  xor_loop.dot  xor_loop_wip.dot
patterns/crypto/: aes_libressl_v0.1.dot  generator_md5_libressl_crypto.py  md5_libressl_crypto.grapp
patterns/unprotect/: unprotect_sandbox-evasion_CPUID.grapp  unprotect_sandbox-evasion_IO-VMWare.grapp
releases/changelogs/: v1.2.0  v1.2.1  v1.3.0  v1.3.1
releases/grap_1-1-0_ida695_windows/: grap_1-1-0_ida695_windows.zip.SHA256
src/: CMakeLists.txt
src/cmake-modules/: ListCombinations.cmake
src/libs/node_info/: CMakeLists.txt  node_info.cpp  node_info.hpp
src/tools/grap-match/: CMakeLists.txt  grap-match.cpp  grap-match.hpp  grap-match.py
(+149 files in other folders)
